# allocator

./: CMakeLists.txt  README.md  build.sh  main.c
memmanagment/: CMakeLists.txt  memmanagment.c  memmanagment.h
